# analyzer-2

./: Cargo.toml  Dockerfile  NOTES.rs  docker_oneliner.sh  example.rs  graph  new.yaml  notes.txt  oneliner.sh  out  perf.data  perf.data.old  plugin_list.txt  stdout  tags_paths.txt  test.php  test.rs  test0.php  test1.php  trunks.txt  working_oo_poc.rs
old/: graph.rs  oldanalyzer.rs  resolver.rs
src/: analyzer.rs  cursor.rs  file.rs  graph.rs  main.rs  resolved.rs  resolver.rs  rules.rs
src/analyzer/: analyzer.rs  mod.rs  taint.rs
src/graph/: 072422  flowgraph.rs  graph.rs  mod.rs  rules.rs  vertex.rs
src/repository/: repository.rs
src/tree/: cursor.rs  file.rs  mod.rs  resolved.rs  tracer.rs  traverser.rs
src/utils/: dumper.rs
